<resources>
    <string name="app_name">오더메이트</string>
    <string name="login_customer">고객</string>
    <string name="login_store">가게</string>
    <string name="app_logo">ORDERMATE</string>
    <string name="password">비밀번호</string>
    <string name="password_confirm">비밀번호 확인</string>
    <string name="id">아이디</string>
    <string name="email">이메일</string>
    <string name="nickname">닉네임</string>
    <string name="phone">휴대폰번호</string>
    <string name="login">로그인</string>
    <string name="login_google">Google로 로그인</string>
    <string name="signup_email">이메일로 회원가입하기</string>
    <string name="signup">회원가입</string>
    <string name="back">뒤로가기</string>
    <string name="next">다음으로</string>
    <string name="done">완료</string>
    <string name="check_duplicate">중복확인</string>
    <string name="home">홈</string>
    <string name="search_store">가게 검색</string>
    <string name="my_location">내위치</string>
    <string name="favorite_store">찜한가게</string>
    <string name="order_list">주문내역</string>
    <string name="last_order">지난주문</string>
    <string name="menu_mgm">메뉴관리</string>
    <string name="review_mgm">리뷰관리</string>
    <string name="review_list">리뷰내역</string>
    <string name="profile">프로필</string>
    <string name="setting">설정</string>
    <string name="store_name">가게이름</string>
    <string name="store_open">가게 열기</string>
    <string name="store_introduction">가게 소개</string>
    <string name="store_tel">전화번호</string>
    <string name="store_hours">영업시간</string>
    <string name="store_address">주소</string>
    <string name="password_change">비밀번호 변경</string>
    <string name="logout">로그아웃</string>
    <string name="logout_dialog_body">로그아웃 하시겠습니까?</string>
    <string name="dialog_positive_button">확인</string>
    <string name="dialog_negative_button">취소</string>
    <string name="toast_password_incorrect">비밀번호를 올바른 형식으로 입력해주세요.</string>
    <string name="toast_password_confirm_unmatch">새 비밀번호와 비밀번호 확인이 일치하지 않습니다.</string>
    <string name="toast_password_updated">비밀번호가 성공적으로 변경되었습니다.</string>
    <string name="toast_password_updated_failed">비밀번호 변경에 실패하였습니다.</string>
    <string name="toast_problem_occurred">문제가 발생하였습니다. 관리자에게 문의해주세요.</string>
    <string name="toast_no_results_found">검색 결과가 없습니다.</string>
    <string name="toast_store_image_load_failed">가게사진을 불러오는데 실패하였습니다.</string>
    <string name="naver_map_client_id">r7pr3y3dqo</string>
    <string-array name="dialog_picture_select_items">
        <item>사진 촬영</item>
        <item>앨범에서 사진 선택</item>
    </string-array>
</resources>