<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_store_order_list"
        android:title="@string/order_list"
        android:icon="@drawable/ic_order" />
    <item
        android:id="@+id/menu_store_last_order"
        android:title="@string/last_order"
        android:icon="@drawable/ic_last_order"/>
    <item
        android:id="@+id/menu_store_menu_mgm"
        android:title="@string/menu_mgm"
        android:icon="@drawable/ic_menu"/>
    <item
        android:id="@+id/menu_store_review_mgm"
        android:title="@string/review_mgm"
        android:icon="@drawable/ic_review"/>
    <item
        android:id="@+id/menu_store_setting"
        android:title="@string/setting"
        android:icon="@drawable/ic_setting"/>
</menu>